# queck

./: .gitmodules  README.md  pyproject.toml  todo.md
.github/workflows/: ci-cd.yaml
examples/: markdown_sample.queck  markdown_sample.queck.yaml  sample_quiz.queck  sample_quiz.yaml
schema/: queck_schema.json  quiz_schema.json
scripts/: export_schemas.py
src/queck/: __init__.py  answer_models.py  cli.py  extract.py  genai_utils.py  live_server.py  mdit_plugins.py  model_utils.py  queck_models.py  queck_utils.py  quiz_models.py  render_utils.py  renderers.py  utils.py
src/queck/mdit_plugins/: __init__.py  css_inline.py  fence_default_lang.py  image_collector.py  image_embed.py  mdformat.py  pygments.py
src/queck/prompts/: quiz_extraction_prompt.txt
src/queck/templates/: base.css  gh_alerts.json  katex_and_hljs_includes.html  overview.md.jinja  queck_macros.md.jinja  queck_template.html.jinja  queck_template.md.jinja  queck_template.yaml.jinja  question_template.md.jinja  quiz_template.html.jinja  quiz_template.md.jinja  style.css
src/queck/templates/components/: common_data_question.md.jinja  queck.md.jinja  question.md.jinja
src/queck/templates/export_templates/: base.html.jinja  fast.html.jinja  inline.html.jinja  latex.html.jinja
test/: answer_attr_check_fixtures.yaml  answer_conversion_fixtures.yaml  common.py  merger_fixture.yaml  test_answer_models.py  test_models.py  test_queck_models.py  test_utils.py
test/fixtures/: answer_fixtures.yaml  question_fixtures.yaml
