
[project]
name = "queck"
version = "0.0.4"
description = "A quiz authoring format and tool with different export formats."
readme = "README.md"
authors = [{ name = "Livin Nector", email = "livinnector2001@gmail.com" }]
license = { text = "MIT" }
requires-python = "<4.0,>=3.10"
dependencies = [
    "pydantic<3.0,>=2.0",
    "pyyaml<7.0,>=6.0",
    "jinja2<4.0,>=3.1",
    "mdit-py-plugins>=0.4.2",
    "linkify-it-py>=2.0.3",
    "watchfiles>=0.24.0",
    "css-inline>=0.14.1",
    "fire>=0.7.0",
    "pygments>=2.18.0",
    "nodeenv>=1.9.1",
    "asyncio>=3.4.3",
    "websockets>=13.1",
    "mdformat>=0.7.19",
    "mdformat-black>=0.1.1",
    "mdformat-gfm>=0.3.7",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"queck.templates" = ["*"]

[project.scripts]
queck = "queck.cli:main"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ruff>=0.7.3"]

[tool.uv]
package = true

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "I", "W", "N", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"
